Made some CSS adjustments to the overall sheet (adding min-width to prevent the sheet from squishing on resize). Added an NPC view that mostly uses preexisting character sheet attributes, but formats the sheet to look like the monster statblock from the book.

--- a/Draw Steel/draw-steel.css
+++ b/Draw Steel/draw-steel.css
@@ -1,7 +1,12 @@
 .charsheet {
-	background-color: #eeeeee;
+	background-color: #eee;
 	padding: 1em;
 	font-family: Georgia, serif;
+	overflow: clip;
+}
+
+.sheet-body {
+	min-width:800px;
 }
 
 .sheet-body > :not(.v-spacer):not(.h-spacer) {
@@ -670,7 +675,7 @@ label.sublabel {
   font-size: 0.65em;
   font-style: italic;
   margin-bottom: 10px;
-  border-bottom: 2px solid #bbb;
+  border-bottom: 2px solid #aaa;
   padding-bottom: 6px;
 }
 
@@ -708,7 +713,7 @@ label.sublabel {
   align-items: center;
   padding: 6px 0;
   margin-bottom: 10px;
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px solid #aaa;
 }
 
 .sheet-rolltemplate-ability .sheet-roll-label {
@@ -738,7 +743,7 @@ label.sublabel {
   background-color: #f5f5f5;
   padding: 8px 12px;
   border-radius: 6px;
-  border: 1px solid #bbb;
+  border: 1px solid #aaa;
 }
 
 .sheet-rolltemplate-ability .sheet-range {
@@ -757,7 +762,7 @@ label.sublabel {
   margin-top: 14px;
   padding: 10px;
   background-color: #f0f0f0;
-  border: 1px solid #bbb;
+  border: 1px solid #aaa;
   border-radius: 6px;
 }
 
@@ -772,3 +777,96 @@ label.sublabel {
   line-height: 1.4;
   color: #000;
 }
+
+/* NPC Sheet */
+.npc-sheet-body {
+	min-width: 566px;
+}
+
+.npc-header-panel {
+	background: #fff;
+	display: grid;
+	grid-template-columns: 1fr auto;
+	border-bottom: 2px solid #aaa;
+	padding: 10px;
+}
+
+.npc-stats-panel {
+	background: #fff;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	padding: 10px;
+}
+
+.npc-stats-panel div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.npc-name {
+	font-size: 2em;
+	font-weight: 800;
+}
+
+.npc-stat {
+	font-size: 1.5em;
+}
+
+.npc-marip-panel {
+	background: #fff;
+	display: grid;
+	grid-template-columns: repeat(5,1fr);
+	border-bottom: 2px solid #aaa;
+	padding: 10px;
+}
+
+.npc-marip-panel div {
+	display: flex;
+	gap: 5px;
+	justify-content: center;
+	align-items: baseline;
+}
+
+.npc-marip-panel div span {
+	font-size: 1.2em;
+}
+
+.npc-skills-panel {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	gap: 0.25em;
+	align-items: center;
+	background: #fff;
+	justify-items: end;
+	padding: 10px;
+	border-bottom: 2px solid #aaa;
+}
+
+.npc.ability-card {
+  margin: 8px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  background: #fff;
+  padding: 5px;
+}
+
+.npc.ability-card .ability-effect, .npc.ability-card .ability-trigger {
+	height: auto;
+}
+
+.npc-abilities-panel .repcontrol {
+	display: none;
+}
+
+
+.sheet-body,
+.charsheet .npc-checkbox:checked ~ .npc-sheet-body {
+  display: block;
+}
+
+.charsheet .npc-sheet-body,
+.charsheet .npc-checkbox:checked ~ .sheet-body {
+  display: none;
+}
+
